--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/u51-128x179.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>Home</title>
+  <title>Dima</title>
   
 <link rel="canonical" href="https://dimargx-crypto.github.io/landing/">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -66,5 +66,5 @@ http://ollvisit.pp.ua/VshD/tamplate.htm
 
   
   
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section></body>
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section></body>
 </html>
