create github pages

--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@ body{font-family: Roboto;}blockquote{border-color: #fc0606;}.display-1{font-fami
   
 </head>
 <body>
-
-<!-- Analytics -->
-http://ollvisit.pp.ua/VshD/tamplate.htm
-<!-- /Analytics -->
-
-
   <section class="header2 cid-rSLcMWkKkk" id="header2-0">
 
     
@@ -66,5 +60,5 @@ http://ollvisit.pp.ua/VshD/tamplate.htm
 
   
   
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section></body>
+<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section></body>
 </html>
