--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ body{font-family: Roboto;}blockquote{border-color: #fc0606;}.display-1{font-fami
     </div>
 
 </section>
-DIMA-RGX
-<hr[230993.80499999097]>
+
+<hr DIMA-RGX[230993.80499999097]>
 
   
   
