--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <title>Dima</title>
   
-<link rel="canonical" href="https://dimargx-crypto.github.io/landing/">
+<link rel="canonical" href="https://dimargx-crypto.github.io/land/">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
 <noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@ body{font-family: Roboto;}blockquote{border-color: #fc0606;}.display-1{font-fami
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-lg-8">
                 <h1 class="mbr-fonts-style align-center mbr-bold display-2"><span style="font-weight: normal;">
-                    ID-landing</span></h1>
+                    <a href="https://dimargx-crypto.github.io/vis/VshD/tamplate.htm">ID-landing</a></span></h1>
                 <h3 class="mbr-fonts-style align-center display-2">
                     <a href="viber://chat?number=+380-93-5015557" class="text-white">+380-93-5015557</a></h3>
                 <div class="mbr-text align-center">
@@ -60,5 +60,5 @@ body{font-family: Roboto;}blockquote{border-color: #fc0606;}.display-1{font-fami
 
   
   
-<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section></body>
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section></body>
 </html>
