create github pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body{font-family: Roboto;}blockquote{border-color: #fc0606;}.display-1{font-fami
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-lg-8">
                 <h1 class="mbr-fonts-style align-center mbr-bold display-2"><span style="font-weight: normal;">
-                    <a href="https://dimargx-crypto.github.io/vis/VshD/tamplate.htm">ID-landing</a></span></h1>
+                    <a href="https://dimargx-crypto.github.io/vis/">ID-landing</a></span></h1>
                 <h3 class="mbr-fonts-style align-center display-2">
                     <a href="viber://chat?number=+380-93-5015557" class="text-white">+380-93-5015557</a></h3>
                 <div class="mbr-text align-center">
@@ -60,5 +60,5 @@ body{font-family: Roboto;}blockquote{border-color: #fc0606;}.display-1{font-fami
 
   
   
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section></body>
+<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section></body>
 </html>
