--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@ body{font-family: Roboto;}blockquote{border-color: #fc0606;}.display-1{font-fami
                 <h1 class="mbr-fonts-style align-center mbr-bold display-2"><span style="font-weight: normal;">
                     <a href="https://dimargx-crypto.github.io/vis/">ID-landing</a></span></h1>
                 <h3 class="mbr-fonts-style align-center display-2">
-                    <a href="viber://chat?number=+380-93-5015557" class="text-white">+380-93-5015557</a></h3>
+                    <a href="tel:+380-93-5015557" class="text-white">+380-93-5015557</a></h3>
                 <div class="mbr-text align-center">
                     
                 </div>
                 
-                <amp-img src="assets/images/u52-262x367.png" alt="image" width="731.0299727520436" height="1024" layout="responsive" class="mobirise-loader" title="Dima Khamedov">
+                <amp-img src="assets/images/u52-262x367.png" alt="image" width="611.0953678474115" height="856" layout="responsive" class="mobirise-loader" title="Dima Khamedov">
                     <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -60,5 +60,5 @@ body{font-family: Roboto;}blockquote{border-color: #fc0606;}.display-1{font-fami
 
   
   
-<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section></body>
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section></body>
 </html>
