create github pages

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body{font-family: Roboto;}blockquote{border-color: #fc0606;}.display-1{font-fami
                                     <em></em>
                                     <em></em>
                                 </div></div>
-                    <a href="tg://resolve?domain=Dima Khamedov"></a>
+                    <a href="mailto:dima.khamedov@gmail.com"></a>
                 </amp-img>
             </div>
         </div>
@@ -60,5 +60,5 @@ body{font-family: Roboto;}blockquote{border-color: #fc0606;}.display-1{font-fami
 
   
   
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section></body>
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section></body>
 </html>
